--- a/style.scss
+++ b/style.scss
@@ -198,7 +198,7 @@ h2 {
   justify-content: center; 
   align-items: flex-start; 
   min-height: 10vh; 
-  margin-bottom: 2px;  /* Lower this to add space to slide */
+  margin-bottom: 2px; 
 }
 
 .bounce {
